Fix yahoo symbol search